# binary-analysis-tools

./: README.md
binary-analysis-tools/: .project  binary-analysis-tools.cabal  design.dia
binary-analysis-tools/rsrc/: bintools.ui
binary-analysis-tools/spec/: IA-32_opcodes.xml
binary-analysis-tools/src/: MachineDescription.hs  Main.hs  ParseMachineDescription.hs  UnitTests.hs
binary-analysis-tools/src/BinaryEditor/: BinaryEditor.hs  BinaryFile.hs  UnknownBinaryFile.hs
binary-analysis-tools/src/BinaryTemplate/: AbstractSyntax.hs  Evaluate.hs  Parse.hs  ResultTree.hs  TestEvaluate.hs  TestParse.hs
binary-analysis-tools/src/BitStream/: BitStream.hs  HexDump.hs  TestBitStream.hs
binary-analysis-tools/src/Disassembler/: Disassembler.hs  TestDisassembler.hs
binary-analysis-tools/src/GUI/: BinaryEditorView.hs  HexEditor.hs  Main.hs  RegionEditor.hs  SectionEditor.hs  TextEditor.hs
binary-analysis-tools/src/HexDump/: HexDump.hs
