name:           binary-analysis-tools
version:        0.1
cabal-version:  >= 1.2
build-type:     Simple
author:         msharman
data-files:     
                rsrc/bintools.ui, 
                spec/IA-32_opcodes.xml

executable binary-analysis-tools
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   gtk,
                   bytestring,
                   mtl,
                   hxt,
                   containers,
                   HUnit,
                   glade,
                   mmap
  ghc-options:     -Wall -fno-warn-unused-do-bind
  other-modules:   
                   GUI.Main,
                   HexDump.HexDump

